# tinypipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-package.yaml  run-tests.yaml
tests/: test_pipeline.py
tinypipeline/: __init__.py  pipeline.py  step.py
